apps/production/media/overseerr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
spec:
  serviceName: "overseerr"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: registry-proxy.local.hejsan.xyz/linuxserver/overseerr:v1.33.2-ls119
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: overseerr-config-pvc
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: overseerr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
