apps/production/media/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app: overseerr
  ports:
    - name: http
      targetPort: 5055
      port: 5055
