apps/production/media/overseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: overseerr
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
